<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".userprofile"
    tools:showIn="@layout/activity_userprofile"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/green"
        android:orientation="horizontal">

        <TextView
            style="@style/userProfiletxt"
            android:paddingHorizontal="35dp"
            android:paddingVertical="12dp"
            android:text="@string/home" />

        <TextView
            style="@style/userProfiletxt"
            android:paddingLeft="31dp"
            android:paddingRight="30dp"
            android:paddingVertical="12dp"
            android:text="@string/question" />

        <TextView
            style="@style/userProfiletxt"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingVertical="12dp"
            android:text="@string/notification" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/UserDp"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:scaleType="fitXY"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp"
            android:adjustViewBounds="true"
            android:src="@drawable/mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/UserDp"
                android:layout_marginHorizontal="32dp"
                android:text="@string/username"
                android:textStyle="bold"
                app:fontFamily="@font/arbutus_slab" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="104dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:padding="3dp"
                android:adjustViewBounds="true"
                android:src="@drawable/pic5" />

            <ImageView
                android:layout_width="104dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:padding="3dp"
                android:adjustViewBounds="true"
                android:src="@drawable/pic3" />
        </GridLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="104dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:padding="3dp"
                android:adjustViewBounds="true"
                android:src="@drawable/pic2"
                />

            <RelativeLayout>

                <ImageView
                    android:id="@+id/userpic4"
                    android:layout_width="104dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:padding="3dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/pic2"
                    />

                <Button
                    style="@style/circleButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:text="+"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="55dp"
                    android:layout_marginLeft="65dp"
                    />

            </RelativeLayout>

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:background="@color/white">


        <TextView
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="27dp"
            android:text="@string/UserInfo"
            android:textAlignment="center"
            android:textStyle="normal"
            android:paddingHorizontal="10dp"
            app:fontFamily="@font/arbutus_slab"
            android:textSize="12sp"/>
        <Button
            style="@style/Button2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/follow"
            android:background="@drawable/button"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:backgroundTint="@color/green"/>

    </LinearLayout>





</LinearLayout>